--- a/login.html
+++ b/login.html
@@ -16,14 +16,14 @@
                 <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/food-munch-img.png" alt="Food Munch Logo" class="login-logo" />
             </div>
             <h4 class="text-center mb-3">Login to Food Munch</h4>
-            <form onsubmit="return handleLogin()">
+            <form action="https://script.google.com/macros/s/AKfycbxw4MDz67OpiDO3388OJ0s_7vak_C12BtVAtsvZEIPWHhW1E4K_77SniAb3pwEIZuWt/exec" method="POST">
                 <div class="form-group">
                     <label for="username">Email or Username</label>
-                    <input type="text" class="form-control" id="username" required />
+                    <input type="text" class="form-control" id="username" name="email" required />
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" required />
+                    <input type="password" class="form-control" id="password" name="password" required />
                 </div>
                 <div class="form-group form-check">
                     <input type="checkbox" class="form-check-input" id="rememberMe" />
@@ -41,22 +41,6 @@
     </div>
 
     <script>
-        function handleLogin() {
-            const username = document.getElementById('username').value;
-            const rememberMe = document.getElementById('rememberMe').checked;
-
-            if (rememberMe) {
-                // Save username in localStorage
-                localStorage.setItem('username', username);
-            } else {
-                localStorage.removeItem('username');
-            }
-
-            // Redirect to your main site
-            window.location.href = "index.html"; // your homepage file
-            return false; // prevent form submit
-        }
-
         // Auto-fill username if remembered
         window.onload = function() {
             const savedUsername = localStorage.getItem('username');
@@ -64,6 +48,15 @@
                 document.getElementById('username').value = savedUsername;
                 document.getElementById('rememberMe').checked = true;
             }
+
+            document.getElementById('rememberMe').addEventListener('change', function() {
+                if (this.checked) {
+                    const username = document.getElementById('username').value;
+                    localStorage.setItem('username', username);
+                } else {
+                    localStorage.removeItem('username');
+                }
+            });
         };
     </script>
 </body>
